[package]
name = "ac_viewer"
version = "0.1.0"
edition = "2021"
authors = ["tochiji"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1", features = ["full"] }
clap =  { version = "3.0.7", features = ["derive"] }
easy-scraper = "0.2.0"
requestty = "0.2.1"
bat = "0.19.0"